# cosync

./: .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
crates/cosync-server/: Cargo.toml
crates/cosync-server/src/: main.rs  protocol.rs  room.rs  session.rs  state.rs
docs/: architecture.md
docs/adr/: 0001-authoritative-server.md  0002-direct-websocket-not-proxied.md  0003-presence-and-conflict-model.md
web/: .env.local  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: ConnectionStatus.tsx  Editor.tsx  PresenceBar.tsx
web/lib/: protocol.ts  types.ts  useCosync.ts
