[package]
name = "cosync-server"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
